--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="sr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="http://aislike.rs/LOKI/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="http://aislike.rs/LOKI/favicon-32x32.png" />
-    <link rel="apple-touch-icon" href="http://aislike.rs/LOKI/android-chrome-512x512.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="/images/android-chrome-512x512.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="LOKI N-4 ★ Najveći proizvođač betonskih elemenata u Vrnjačkoj Banji ★ Betonski blokovi, cevi, šahtovi ✓ Najpovoljnije cene ✓ Vrhunski kvalitet ✓ Brza dostava u Kraljevu, Trsteniku, Aleksandrovcu" />
